--- a/package.json
+++ b/package.json
@@ -1,3 +1,49 @@
 {
-   "version": "0.0.1" 
+  "name": "@vesselapi/integrations",
+  "version": "0.0.1",
+  "description": "Vessel integrations",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/esm/index.mjs",
+    "require": "./dist/cjs/index.cjs"
+  },
+  "sideEffects": false,
+  "files": [
+    "dist/**/*"
+  ],
+  "repository": {
+    "url": "https://github.com/vesselapi/integrations"
+  },
+  "private": false,
+  "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "precheck": "yarn test && yarn build",
+    "build": "yarn tsc --noEmit && yarn rollup -c",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" --ignore-unknown"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@types/jest": "^29.4.0",
+    "esbuild": "^0.16.3",
+    "jest": "^29.4.3",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.3",
+    "rollup": "^3.2.5",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^5.0.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": ">=14.18.0"
+  },
+  "dependencies": {
+    "radash": "^10.7.0"
+  }
 }
