--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node": ">=14.18.0"
   },
   "dependencies": {
-    "radash": "^10.7.0"
+    "radash": "^10.7.0",
+    "zod": "^3.20.6"
   }
 }
