add public arg to publish

--- a/.github/workflows/publish-on-prerelease-pr.yml
+++ b/.github/workflows/publish-on-prerelease-pr.yml
@@ -55,6 +55,6 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: yarn
       - run: yarn build
-      - run: npm publish --next
+      - run: npm publish --next --access public
         env:
           NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
