--- a/.github/workflows/release-and-publish-on-merge.yml
+++ b/.github/workflows/release-and-publish-on-merge.yml
@@ -51,6 +51,6 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: yarn
       - run: yarn build
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
