--- a/.github/workflows/publish-on-prerelease-pr.yml
+++ b/.github/workflows/publish-on-prerelease-pr.yml
@@ -25,7 +25,7 @@ jobs:
           PR_VERSION: ${{steps.pr-version.outputs.current-version}}
           BASE_VERSION: ${{steps.base-version.outputs.current-version}}
         with:
-          script: require('./.github/workflows/versioning.js').assert.isValidPrerelease({github, context, core})
+          script: require('./versioning.js').assert.isValidPrerelease({github, context, core})
   publish-prerelease:
     runs-on: ubuntu-latest
     needs: verify-prerelease-version
