--- a/.github/workflows/verify-version-on-pr.yml
+++ b/.github/workflows/verify-version-on-pr.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           ref: main
       - uses: martinbeentjes/npm-get-version-action@main
-        id: base-version
+        id: main-version
       - uses: actions/checkout@v3
       - uses: martinbeentjes/npm-get-version-action@main
         id: pr-version
@@ -22,8 +22,8 @@ jobs:
       - run: yarn add semver
       - uses: actions/github-script@v6
         env:
-          PR_VERSION: ${{steps.pr-version.outputs.version}}
-          BASE_VERSION: ${{steps.base-version.outputs.version}}
+          PR_VERSION: ${{steps.pr-version.outputs.current-version}}
+          MAIN_VERSION: ${{steps.main-version.outputs.current-version}}
         with:
           script: require('./.github/workflows/versioning.js').assert.isUnchanged({github, context, core})
   verify-version-for-release:
@@ -35,7 +35,7 @@ jobs:
         with:
           ref: main
       - uses: martinbeentjes/npm-get-version-action@main
-        id: base-version
+        id: main-version
       - uses: actions/checkout@v3
       - uses: martinbeentjes/npm-get-version-action@main
         id: pr-version
@@ -45,8 +45,8 @@ jobs:
       - run: yarn add semver
       - uses: actions/github-script@v6
         env:
-          PR_VERSION: ${{steps.pr-version.outputs.version}}
-          BASE_VERSION: ${{steps.base-version.outputs.version}}
+          PR_VERSION: ${{steps.pr-version.outputs.current-version}}
+          MAIN_VERSION: ${{steps.main-version.outputs.current-version}}
         with:
           script: require('./.github/workflows/versioning.js').assert.isValidRelease({github, context, core})
   verify-version-for-prerelease:
@@ -58,7 +58,7 @@ jobs:
         with:
           ref: main
       - uses: martinbeentjes/npm-get-version-action@main
-        id: base-version
+        id: main-version
       - uses: actions/checkout@v3
       - uses: martinbeentjes/npm-get-version-action@main
         id: pr-version
@@ -68,8 +68,8 @@ jobs:
       - run: yarn add semver
       - uses: actions/github-script@v6
         env:
-          PR_VERSION: ${{steps.pr-version.outputs.version}}
-          BASE_VERSION: ${{steps.base-version.outputs.version}}
+          PR_VERSION: ${{steps.pr-version.outputs.current-version}}
+          MAIN_VERSION: ${{steps.main-version.outputs.current-version}}
         with:
           script: require('./.github/workflows/versioning.js').assert.isValidPrerelease({github, context, core})
   fail-on-prerelease:
