--- a/.github/workflows/publish-on-prerelease-pr.yml
+++ b/.github/workflows/publish-on-prerelease-pr.yml
@@ -29,6 +29,6 @@ jobs:
           script: require('./.github/versioning.js').verify({ github, context, core })
       - run: yarn
       - run: yarn build
-      - run: npm publish --next --access public
+      - run: npm publish --tag next --access public
         env:
           NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
