--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.7",
+  "version": "0.0.8-rc-1",
   "description": "Vessel integrations",
   "main": "dist/cjs/index.cjs",
   "module": "dist/esm/index.mjs",
