feat: outreach client + actions (#19)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "moduleResolution": "node",
     "target": "es2022",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": [
-    "src/**/*.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
