--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.15",
+  "version": "0.0.16-rc-1",
   "description": "Vessel integrations",
-  "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts",
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "jest",
     "precheck": "yarn test && yarn build",
-    "build": "yarn tsc --noEmit && yarn rollup -c",
+    "build": "yarn tsc --noEmit && yarn tsup",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" --ignore-unknown"
   },
@@ -38,6 +38,7 @@
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-node-externals": "^5.0.2",
     "ts-jest": "^29.0.5",
+    "tsup": "^6.7.0",
     "typescript": "^4.9.4"
   },
   "engines": {
