--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^10.0.1",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "29.0.3",
     "esbuild": "^0.16.3",
-    "jest": "^29.4.3",
+    "jest": "29.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.3",
     "rollup": "^3.2.5",
