--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.16-rc-1",
+  "version": "0.0.16-rc-2",
   "description": "Vessel integrations",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts",
-    "import": "./dist/esm/index.mjs",
-    "require": "./dist/cjs/index.cjs"
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
   },
   "sideEffects": false,
   "files": [
