--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "Vessel integrations",
-  "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     "types": "./dist/index.d.ts",
-    "import": "./dist/esm/index.mjs",
-    "require": "./dist/cjs/index.cjs"
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
   },
   "sideEffects": false,
   "files": [
@@ -22,22 +22,18 @@
   "scripts": {
     "test": "jest",
     "precheck": "yarn test && yarn build",
-    "build": "yarn tsc --noEmit && yarn rollup -c",
+    "build": "yarn tsc --noEmit && yarn tsup",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" --ignore-unknown"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^10.0.1",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "29.0.3",
     "esbuild": "^0.16.3",
-    "jest": "^29.4.3",
+    "jest": "29.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.3",
-    "rollup": "^3.2.5",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-node-externals": "^5.0.2",
     "ts-jest": "^29.0.5",
+    "tsup": "^6.7.0",
     "typescript": "^4.9.4"
   },
   "engines": {
