--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "libphonenumber-js": "^1.10.24",
     "radash": "^10.8.1",
     "zod": "^3.21.4"
   }
