--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.62",
+  "version": "0.0.63",
   "description": "Vessel integrations",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -40,6 +40,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "libphonenumber-js": "^1.10.24",
     "radash": "^10.8.1",
     "zod": "^3.21.4"
