--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.64",
+  "version": "0.0.65",
   "description": "Vessel integrations",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -43,6 +43,7 @@
     "date-fns": "^2.29.3",
     "libphonenumber-js": "^1.10.24",
     "radash": "^10.8.1",
+    "type-fest": "^3.8.0",
     "zod": "^3.21.4"
   }
 }
