--- a/.github/workflows/release-and-publish-on-merge.yml
+++ b/.github/workflows/release-and-publish-on-merge.yml
@@ -23,6 +23,8 @@ jobs:
     needs: check
     if: needs.check.outputs.exists == 'false'
     runs-on: 'ubuntu-latest'
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - uses: martinbeentjes/npm-get-version-action@main
