--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vesselapi/integrations",
-  "version": "0.0.109",
+  "version": "0.0.110-rc.1",
   "description": "Vessel integrations",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
