--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "libphonenumber-js": "^1.10.24",
     "radash": "^10.8.1",
