--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "libphonenumber-js": "^1.10.24",
     "radash": "^10.8.1",
     "type-fest": "^3.8.0",
+    "undici": "^5.22.1",
     "zod": "^3.21.4"
   }
 }
